WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134343
DFG::FunctionWhitelist::parseFunctionNamesInFile does not close file
https://bugs.webkit.org/show_bug.cgi?id=134343
Summary
DFG::FunctionWhitelist::parseFunctionNamesInFile does not close file
David Kilzer (:ddkilzer)
Reported
2014-06-26 01:20:34 PDT
DFG::FunctionWhitelist::parseFunctionNamesInFile returns without calling fclose(f), so the file descriptor leaks.
Attachments
Patch v1
(1.44 KB, patch)
2014-06-26 01:22 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2014-06-26 01:20:46 PDT
<
rdar://problem/17459487
>
David Kilzer (:ddkilzer)
Comment 2
2014-06-26 01:22:56 PDT
Created
attachment 233892
[details]
Patch v1
WebKit Commit Bot
Comment 3
2014-06-26 08:30:47 PDT
Comment on
attachment 233892
[details]
Patch v1 Clearing flags on attachment: 233892 Committed
r170480
: <
http://trac.webkit.org/changeset/170480
>
WebKit Commit Bot
Comment 4
2014-06-26 08:30:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug