DFG::FunctionWhitelist::parseFunctionNamesInFile does not close file <http://webkit.org/b/134343> <rdar://problem/17459487>

Reviewed by Michael Saboff.

* dfg/DFGFunctionWhitelist.cpp:
(JSC::DFG::FunctionWhitelist::parseFunctionNamesInFile):
Close the file handle, and log an error on failure.


Canonical link: https://commits.webkit.org/152327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170480 268f45cc-cd09-0410-ab3c-d52691b4dbfc